# rust_iso20022

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  xsd_diff.md
docs/: status.md  wasm-api.md
examples/: inspect_message.rs  typed_payment.rs
scripts/: build-wasm.sh  publish.sh
src/: convert.rs  fetch.rs  lib.rs  node.rs  simple_type.rs  validate.rs  wasm.rs
src/catalogue/: data.rs  mod.rs
src/core/: app_hdr.rs  business_area.rs  envelope.rs  error.rs  message.rs  metadata.rs  mod.rs  mx_id.rs  mx_message.rs  xml_scan.rs
tests/: app_hdr.rs  core.rs  identity.rs  json.rs  metadata.rs  roundtrip.rs  serde.rs
tests/data/: camt.056.001.09.xml  (+2 more)
tools/codegen/: Cargo.toml
tools/codegen/src/: main.rs
xsds/: acmt.015.001.05.xsd  acmt.016.001.05.xsd  acmt.017.001.05.xsd  acmt.018.001.05.xsd  acmt.027.001.06.xsd  acmt.028.001.06.xsd  acmt.029.001.06.xsd  acmt.031.001.06.xsd  acmt.032.001.06.xsd  acmt.034.001.06.xsd  auth.069.001.03.xsd  auth.120.001.01.xsd  auth.121.001.01.xsd  auth.122.001.01.xsd  auth.123.001.01.xsd  auth.124.001.01.xsd  caaa.001.001.15.xsd  caaa.002.001.15.xsd  caaa.003.001.15.xsd  caaa.004.001.14.xsd  caaa.005.001.15.xsd  caaa.006.001.14.xsd  caaa.007.001.15.xsd  caaa.008.001.14.xsd  caaa.009.001.14.xsd  caaa.010.001.13.xsd  caaa.011.001.15.xsd  caaa.012.001.14.xsd  caaa.013.001.14.xsd  caaa.014.001.13.xsd  caaa.016.001.13.xsd  caaa.017.001.13.xsd  caaa.018.001.10.xsd  caaa.019.001.09.xsd  caaa.020.001.07.xsd  caaa.021.001.07.xsd  caaa.022.001.06.xsd  caaa.023.001.06.xsd  caaa.024.001.06.xsd  caaa.025.001.06.xsd  (+135 more)
